Fixed flash animation for modal view tabs in all themes
The flash animation was broken (and thus not visible anymore) since
Scout 8.0. This change fixes this problem and makes it easier to
configure colors for the desktop tab. Also removed some YUI hacks which
are not required anymore.

255105

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/style/colors.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/style/colors.less
@@ -253,6 +253,10 @@
 @radio-button-disabled-color: @palette-gray-6;
 @scrollbar-thumb-color: @palette-gray-6;
 @scrollbar-thumb-inverted-color: @palette-white;
+@simple-tab-active-color: @active-color;
+@simple-tab-active-background-color: @form-background-color;
+@simple-tab-background-color: @panel-background-color;
+@simple-tab-flash-background-color: @palette-gray-5;
 @status-menu-color: @palette-gray-7;
 @status-menu-hover-color: @hover-color;
 @status-info-color: @icon-light-color;
